src/test/ui/estr-subtyping.stderr
error[E0308]: mismatched types
  --> $DIR/estr-subtyping.rs:10:15
   |
LL |    wants_uniq(x);
   |               ^
   |               |
   |               expected struct `std::string::String`, found &str
   |               help: try using a conversion method: `x.to_string()`
   |
   = note: expected type `std::string::String`
              found type `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
